Closed Bug 1115078 Opened 10 years ago Closed 9 years ago

memory/build/mozjemalloc_compat.c:13:83: fatal error: jemalloc/internal/jemalloc_internal_defs.h: No such file or directory

Categories

(Core :: Memory Allocator, defect)

All
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla37

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

Attachments

(1 file)

FreeBSD uses MOZ_NATIVE_JEMALLOC by default. It's API is limited to <stdlib.h> and <malloc_np.h>. Even version from git dev never installs headers under include/jemalloc/internal/.

$ MOZ_JEMALLOC3=1 ./mach build
...
memory/build/mozjemalloc_compat.c:13:10: fatal error:
      'jemalloc/internal/jemalloc_internal_defs.h' file not found
#include "jemalloc/internal/jemalloc_internal_defs.h" // for JEMALLOC_HAS_ALLOCA_H
         ^
1 error generated.
Attached patch fixSplinter Review
NPOTB but worth Try run when it's open.
Attachment #8540895 - Flags: review?(mh+mozilla)
Attachment #8540895 - Flags: review?(ggoncalves)
Comment on attachment 8540895 [details] [diff] [review]
fix

I can't give you a formal review, but this does look good to me. Thanks, and sorry for breaking your build.
Attachment #8540895 - Flags: review?(ggoncalves) → feedback+
Are you sure that has MOZ_JEMALLOC3? I usually need to do something like https://hg.mozilla.org/try/rev/aab97774f1c3 when pushing to try.
Attachment #8540895 - Flags: review?(mh+mozilla) → review+
Sure, ACDEFINES has -DMOZ_JEMALLOC3='1'. I was lazy and edited configure.in instead of figuring which mozconfig Try server uses, how to write one shared between different platforms and what's the order mozconfig files are read.

https://hg.mozilla.org/try/rev/1408903e87fe
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/b1b9af321bac
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: